Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.0.0 Beta 1
-
Fix Version/s: 5.0.0 Beta 2
-
Component/s: GUI: OpenGL
-
Labels:None
-
Commits:a61788d139470afa02202945f0723a9c8ef745ec
Description
QGLFormat has a hard coded major version of 1 which is suboptimal if we are running on OpenGL ES 2. This major version number is passed to eglChooseConfig(), but the ANGLE implementation of EGL only supports configs with the major version set to 2 so it cannot find a compatible config and as a result, we never get a valid GL context.