Change the default major version of QGLFormat to 2.

This is being changed because:
- The OpenGL paint engine in Qt only supports GL2
- QML2 only supports GL2
- QSurfaceFormat has a default value of 2

Applications that want to use GL1 on a QGLWidget will have to
explicitly request this format using QGLFormat::setVersion.

Task-number: QTBUG-27589

Change-Id: Ieb283ef7d6e15a29ec28ce7e4363dbf477decaa7
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>

cregit: a61788d139470afa02202945f0723a9c8ef745ec https://github.com/qt/qtbase/commit/a61788d139470afa02202945f0723a9c8ef745ec