tests/auto/opengl/qgl/tst_qgl.cpp
@@ -2715,7 +2715,7 @@ operator|.
 name|majorVersion
 argument_list|()
 argument_list|,
-literal|1
+literal|2
 argument_list|)
 expr_stmt|;
 name|QCOMPARE
